fixing working hours

--- a/MTABS/mtabs_app/templates/Settings.html
+++ b/MTABS/mtabs_app/templates/Settings.html
@@ -222,10 +222,9 @@ body.dark-mode .dark-mode-toggle span {
         <div class="settings-card">
             <h3>Privacy Settings</h3>
             <ul>
-                <li>Change Password</li>
-                <li>Two-Factor Authentication</li>
-                <li>Manage Data</li>
-                <li>Profile Visibility</li>
+                <li>Update Account</li>
+                <li>Delete Account</li>
+                <li>Logout</li>
             </ul>
         </div>
 
